noinst_LIBRARIES = libMiniBLAS.a

libMiniBLAS_a_SOURCES = sgemv.f \
sger.f \
strmv.f \
strsv.f \
lsame.f \
caxpy.f \
ccopy.f \
cdotc.f \
cdotu.f \
cgemm.f \
cgemv.f \
cgerc.f \
cgeru.f \
cscal.f \
csscal.f \
cswap.f \
ctrmm.f \
ctrmv.f \
ctrsm.f \
ctrsv.f \
dasum.f \
daxpy.f \
dcabs1.f \
dcopy.f \
ddot.f \
dgemm.f \
dgemv.f \
dger.f \
dlamch.f \
dnrm2.f \
drot.f \
dscal.f \
dswap.f \
dtrmm.f \
dtrmv.f \
dtrsm.f \
dtrsv.f \
dzasum.f \
dznrm2.f \
icamax.f \
idamax.f \
isamax.f \
izamax.f \
sasum.f \
saxpy.f \
scasum.f \
scnrm2.f \
scopy.f \
sdot.f \
sgemm.f \
slamch.f \
snrm2.f \
srot.f \
sscal.f \
sswap.f \
strmm.f \
strsm.f \
xerbla.f \
zaxpy.f \
zcopy.f \
zdotc.f \
zdotu.f \
zdscal.f \
zgemm.f \
zgemv.f \
zgerc.f \
zgeru.f \
zscal.f \
zswap.f \
ztrmm.f \
ztrmv.f \
ztrsm.f \
ztrsv.f 

EXTRA_DIST		= bootstrap
AUTOMAKE_OPTIONS 	= foreign
