noinst_LIBRARIES = libMiniLAPACK.a

libMiniLAPACK_a_SOURCES = complex16/zdrscl.f \
complex16/zgebak.f \
complex16/zgebal.f \
complex16/zgecon.f \
complex16/zgeequ.f \
complex16/zgeevx.f \
complex16/zgehd2.f \
complex16/zgehrd.f \
complex16/zgelsy.f \
complex16/zgeqp3.f \
complex16/zgeqr2.f \
complex16/zgeqrf.f \
complex16/zgerfs.f \
complex16/zgesvx.f \
complex16/zgetf2.f \
complex16/zgetrf.f \
complex16/zgetrs.f \
complex16/zhseqr.f \
complex16/zlacgv.f \
complex16/zlacon.f \
complex16/zlacpy.f \
complex16/zladiv.f \
complex16/zlahqr.f \
complex16/zlahrd.f \
complex16/zlaic1.f \
complex16/zlange.f \
complex16/zlanhs.f \
complex16/zlantr.f \
complex16/zlaqge.f \
complex16/zlaqp2.f \
complex16/zlaqps.f \
complex16/zlarfb.f \
complex16/zlarf.f \
complex16/zlarfg.f \
complex16/zlarft.f \
complex16/zlarfx.f \
complex16/zlartg.f \
complex16/zlarzb.f \
complex16/zlarz.f \
complex16/zlarzt.f \
complex16/zlascl.f \
complex16/zlaset.f \
complex16/zlassq.f \
complex16/zlaswp.f \
complex16/zlatrs.f \
complex16/zlatrz.f \
complex16/zrot.f \
complex16/ztrevc.f \
complex16/ztrexc.f \
complex16/ztrsna.f \
complex16/ztzrzf.f \
complex16/zung2r.f \
complex16/zunghr.f \
complex16/zungqr.f \
complex16/zunm2r.f \
complex16/zunmqr.f \
complex16/zunmr3.f \
complex16/zunmrz.f \
complex/cgebak.f \
complex/cgebal.f \
complex/cgecon.f \
complex/cgeequ.f \
complex/cgeevx.f \
complex/cgehd2.f \
complex/cgehrd.f \
complex/cgelsy.f \
complex/cgeqp3.f \
complex/cgeqr2.f \
complex/cgeqrf.f \
complex/cgerfs.f \
complex/cgesvx.f \
complex/cgetf2.f \
complex/cgetrf.f \
complex/cgetrs.f \
complex/chseqr.f \
complex/clacgv.f \
complex/clacon.f \
complex/clacpy.f \
complex/cladiv.f \
complex/clahqr.f \
complex/clahrd.f \
complex/claic1.f \
complex/clange.f \
complex/clanhs.f \
complex/clantr.f \
complex/claqge.f \
complex/claqp2.f \
complex/claqps.f \
complex/clarfb.f \
complex/clarf.f \
complex/clarfg.f \
complex/clarft.f \
complex/clarfx.f \
complex/clartg.f \
complex/clarzb.f \
complex/clarz.f \
complex/clarzt.f \
complex/clascl.f \
complex/claset.f \
complex/classq.f \
complex/claswp.f \
complex/clatrs.f \
complex/clatrz.f \
complex/crot.f \
complex/csrscl.f \
complex/ctrevc.f \
complex/ctrexc.f \
complex/ctrsna.f \
complex/ctzrzf.f \
complex/cung2r.f \
complex/cunghr.f \
complex/cungqr.f \
complex/cunm2r.f \
complex/cunmqr.f \
complex/cunmr3.f \
complex/cunmrz.f \
double/dgebak.f \
double/dgebal.f \
double/dgecon.f \
double/dgeequ.f \
double/dgeevx.f \
double/dgehd2.f \
double/dgehrd.f \
double/dgelsy.f \
double/dgeqp3.f \
double/dgeqr2.f \
double/dgeqrf.f \
double/dgerfs.f \
double/dgesvx.f \
double/dgetf2.f \
double/dgetrf.f \
double/dgetrs.f \
double/dhseqr.f \
double/dlabad.f \
double/dlacon.f \
double/dlacpy.f \
double/dladiv.f \
double/dlaexc.f \
double/dlahqr.f \
double/dlahrd.f \
double/dlaic1.f \
double/dlaln2.f \
double/dlamch.f \
double/dlange.f \
double/dlanhs.f \
double/dlantr.f \
double/dlanv2.f \
double/dlapy2.f \
double/dlapy3.f \
double/dlaqge.f \
double/dlaqp2.f \
double/dlaqps.f \
double/dlaqtr.f \
double/dlarfb.f \
double/dlarf.f \
double/dlarfg.f \
double/dlarft.f \
double/dlarfx.f \
double/dlartg.f \
double/dlarzb.f \
double/dlarz.f \
double/dlarzt.f \
double/dlascl.f \
double/dlaset.f \
double/dlassq.f \
double/dlaswp.f \
double/dlasy2.f \
double/dlatrs.f \
double/dlatrz.f \
double/dorg2r.f \
double/dorghr.f \
double/dorgqr.f \
double/dorm2r.f \
double/dormqr.f \
double/dormr3.f \
double/dormrz.f \
double/drscl.f \
double/dtrevc.f \
double/dtrexc.f \
double/dtrsna.f \
double/dtzrzf.f \
double/dzsum1.f \
single/scsum1.f \
single/sgebak.f \
single/sgebal.f \
single/sgecon.f \
single/sgeequ.f \
single/sgeevx.f \
single/sgehd2.f \
single/sgehrd.f \
single/sgelsy.f \
single/sgeqp3.f \
single/sgeqr2.f \
single/sgeqrf.f \
single/sgerfs.f \
single/sgesvx.f \
single/sgetf2.f \
single/sgetrf.f \
single/sgetrs.f \
single/shseqr.f \
single/slabad.f \
single/slacon.f \
single/slacpy.f \
single/sladiv.f \
single/slaexc.f \
single/slahqr.f \
single/slahrd.f \
single/slaic1.f \
single/slaln2.f \
single/slamch.f \
single/slange.f \
single/slanhs.f \
single/slantr.f \
single/slanv2.f \
single/slapy2.f \
single/slapy3.f \
single/slaqge.f \
single/slaqp2.f \
single/slaqps.f \
single/slaqtr.f \
single/slarfb.f \
single/slarf.f \
single/slarfg.f \
single/slarft.f \
single/slarfx.f \
single/slartg.f \
single/slarzb.f \
single/slarz.f \
single/slarzt.f \
single/slascl.f \
single/slaset.f \
single/slassq.f \
single/slaswp.f \
single/slasy2.f \
single/slatrs.f \
single/slatrz.f \
single/sorg2r.f \
single/sorghr.f \
single/sorgqr.f \
single/sorm2r.f \
single/sormqr.f \
single/sormr3.f \
single/sormrz.f \
single/srscl.f \
single/strevc.f \
single/strexc.f \
single/strsna.f \
single/stzrzf.f \
util/icmax1.f \
util/ieeeck.f \
util/ilaenv.f \
util/izmax1.f 


EXTRA_DIST		= bootstrap
AUTOMAKE_OPTIONS 	= foreign
