AUTOMAKE_OPTIONS = foreign
EXTRA_DIST = acosplot.png\
asinplot.png\
atan2plot.png\
atanplot.png\
axis1.png\
axis2.png\
axis3.png\
axis4.png\
colormap1.png\
colormap2.png\
colormap3.png\
colormap4.png\
colormap5.png\
colormap6.png\
colormap7.png\
contents.png\
cosplot.png\
cotplot.png\
cscplot.png\
expplot1.png\
expplot2.png\
fft1.png\
fft2.png\
grid1.png\
grid2.png\
hold1.png\
hold2.png\
image1.png\
img100.png\
img101.png\
img102.png\
img10.png\
img11.png\
img12.png\
img13.png\
img14.png\
img15.png\
img16.png\
img17.png\
img18.png\
img19.png\
img1.png\
img20.png\
img21.png\
img22.png\
img23.png\
img24.png\
img25.png\
img26.png\
img27.png\
img28.png\
img29.png\
img2.png\
img30.png\
img31.png\
img32.png\
img33.png\
img34.png\
img35.png\
img36.png\
img37.png\
img38.png\
img39.png\
img3.png\
img40.png\
img41.png\
img42.png\
img43.png\
img44.png\
img45.png\
img46.png\
img47.png\
img48.png\
img49.png\
img4.png\
img50.png\
img51.png\
img52.png\
img53.png\
img54.png\
img55.png\
img56.png\
img57.png\
img58.png\
img59.png\
img5.png\
img60.png\
img61.png\
img62.png\
img63.png\
img64.png\
img65.png\
img66.png\
img67.png\
img68.png\
img69.png\
img6.png\
img70.png\
img71.png\
img72.png\
img73.png\
img74.png\
img75.png\
img76.png\
img78.png\
img79.png\
img7.png\
img80.png\
img81.png\
img82.png\
img83.png\
img84.png\
img85.png\
img86.png\
img87.png\
img88.png\
img89.png\
img8.png\
img90.png\
img91.png\
img92.png\
img93.png\
img94.png\
img95.png\
img96.png\
img97.png\
img98.png\
img99.png\
img9.png\
index.html\
logplot.png\
main.html\
next.png\
node100.html\
node101.html\
node102.html\
node103.html\
node104.html\
node105.html\
node106.html\
node107.html\
node108.html\
node109.html\
node10.html\
node110.html\
node111.html\
node112.html\
node113.html\
node114.html\
node115.html\
node116.html\
node117.html\
node118.html\
node119.html\
node11.html\
node120.html\
node121.html\
node122.html\
node123.html\
node124.html\
node125.html\
node126.html\
node127.html\
node128.html\
node129.html\
node12.html\
node130.html\
node131.html\
node132.html\
node133.html\
node134.html\
node135.html\
node136.html\
node137.html\
node138.html\
node139.html\
node13.html\
node140.html\
node141.html\
node142.html\
node143.html\
node144.html\
node145.html\
node146.html\
node147.html\
node148.html\
node149.html\
node14.html\
node150.html\
node151.html\
node152.html\
node153.html\
node154.html\
node155.html\
node156.html\
node157.html\
node158.html\
node159.html\
node15.html\
node160.html\
node161.html\
node162.html\
node163.html\
node164.html\
node165.html\
node166.html\
node167.html\
node168.html\
node169.html\
node16.html\
node170.html\
node171.html\
node172.html\
node173.html\
node174.html\
node175.html\
node17.html\
node18.html\
node19.html\
node1.html\
node20.html\
node21.html\
node22.html\
node23.html\
node24.html\
node25.html\
node26.html\
node27.html\
node28.html\
node29.html\
node2.html\
node30.html\
node31.html\
node32.html\
node33.html\
node34.html\
node35.html\
node36.html\
node37.html\
node38.html\
node39.html\
node3.html\
node40.html\
node41.html\
node42.html\
node43.html\
node44.html\
node45.html\
node46.html\
node47.html\
node48.html\
node49.html\
node4.html\
node50.html\
node51.html\
node52.html\
node53.html\
node54.html\
node55.html\
node56.html\
node57.html\
node58.html\
node59.html\
node5.html\
node60.html\
node61.html\
node62.html\
node63.html\
node64.html\
node65.html\
node66.html\
node67.html\
node68.html\
node69.html\
node6.html\
node70.html\
node71.html\
node72.html\
node73.html\
node74.html\
node75.html\
node76.html\
node77.html\
node78.html\
node79.html\
node7.html\
node80.html\
node81.html\
node82.html\
node83.html\
node84.html\
node85.html\
node86.html\
node87.html\
node88.html\
node89.html\
node8.html\
node90.html\
node91.html\
node92.html\
node93.html\
node94.html\
node95.html\
node96.html\
node97.html\
node98.html\
node99.html\
node9.html\
nx_grp_g.png\
plot1.png\
plot2.png\
plot3.png\
plot4.png\
plot5.png\
prev_g.png\
prev.png\
printimg1.png\
printplt.png\
secplot.png\
sinplot.png\
tanplot.png\
title1.png\
up_g.png\
up.png\
xlabel1.png\
ylabel1.png\
zoom1.png\
zoom3.png\
zoom4.png\
zoom5.png\
zoom6.png

install-data-local:
	mkdir -p $(prefix)/share/FreeMat/html
	for fname in $(EXTRA_DIST); do \
	  echo "Installing manual html file $$fname"; \
	  $(INSTALL) $(srcdir)/$$fname $(prefix)/share/FreeMat/html;\
	done;
