EXTRA_DIST = abs.mdc \
acos.mdc\
asin.mdc\
atan2.mdc\
atan.mdc\
axis.mdc\
break.mdc\
cd.mdc\
ceil.mdc\
cell.mdc\
clear.mdc\
closeimage.mdc\
closeplot.mdc\
colon.mdc\
colormap.mdc\
comparisonops.mdc\
complex.mdc\
conj.mdc\
continue.mdc\
cos.mdc\
cot.mdc\
csc.mdc\
cumsum.mdc\
dcomplex.mdc\
diag.mdc\
disp.mdc\
dotleftdivide.mdc\
dotpower.mdc\
dotrightdivide.mdc\
dottimes.mdc\
double.mdc\
eig.mdc\
e.mdc\
error.mdc\
eval.mdc\
exist.mdc\
exp.mdc\
fclose.mdc\
feof.mdc\
feval.mdc\
fft.mdc\
fgetline.mdc\
find.mdc\
float.mdc\
floor.mdc\
fopen.mdc\
for.mdc\
fprintf.mdc\
fread.mdc\
fscanf.mdc\
fseek.mdc\
ftell.mdc\
function.mdc\
fwrite.mdc\
getpath.mdc\
getprintlimit.mdc\
global.mdc\
grid.mdc\
help.mdc\
hermitian.mdc\
hold.mdc\
if.mdc\
image.mdc\
imag.mdc\
i.mdc\
import.mdc\
indexing.mdc\
inf.mdc\
int16.mdc\
int32.mdc\
int8.mdc\
isempty.mdc\
keyboard.mdc\
keywords.mdc\
lasterr.mdc\
leftdivide.mdc\
loadlib.mdc\
load.mdc\
logicalops.mdc\
log.mdc\
ls.mdc\
matrix.mdc\
max.mdc\
mean.mdc\
min.mdc\
minus.mdc\
nan.mdc\
nargin.mdc\
nargout.mdc\
newimage.mdc\
newplot.mdc\
ones.mdc\
persistent.mdc\
pi.mdc\
plot.mdc\
plus.mdc\
point.mdc\
power.mdc\
printf.mdc\
printimage.mdc\
printplot.mdc\
prod.mdc\
pwd.mdc\
quit.mdc\
rand.mdc\
randn.mdc\
real.mdc\
reshape.mdc\
retall.mdc\
return.mdc\
rightdivide.mdc\
save.mdc\
script.mdc\
sec.mdc\
seed.mdc\
setpath.mdc\
setprintlimit.mdc\
sin.mdc\
sizeimage.mdc\
size.mdc\
sizeplot.mdc\
sleep.mdc\
source.mdc\
special.mdc\
sprintf.mdc\
strcmp.mdc\
struct.mdc\
sum.mdc\
svd.mdc\
switch.mdc\
system.mdc\
tan.mdc\
times.mdc\
title.mdc\
transpose.mdc\
try.mdc\
typeof.mdc\
uint16.mdc\
uint32.mdc\
uint8.mdc\
useimage.mdc\
useplot.mdc\
varargin.mdc\
varargout.mdc\
var.mdc\
where.mdc\
which.mdc\
while.mdc\
who.mdc\
xlabel.mdc\
ylabel.mdc\
zeros.mdc\
zoom.mdc
