EXTRA_DIST = libARPACK.vcproj \
SRC/f2c/cgetv0.c \
SRC/f2c/cnaitr.c \
SRC/f2c/cnapps.c \
SRC/f2c/cnaup2.c \
SRC/f2c/cnaupd.c \
SRC/f2c/cneigh.c \
SRC/f2c/cneupd.c \
SRC/f2c/cngets.c \
SRC/f2c/csortc.c \
SRC/f2c/cstatn.c \
SRC/f2c/dgetv0.c \
SRC/f2c/dlaqrb.c \
SRC/f2c/dnaitr.c \
SRC/f2c/dnapps.c \
SRC/f2c/dnaup2.c \
SRC/f2c/dnaupd.c \
SRC/f2c/dnaupe.c \
SRC/f2c/dnconv.c \
SRC/f2c/dneigh.c \
SRC/f2c/dneupd.c \
SRC/f2c/dngets.c \
SRC/f2c/dsaitr.c \
SRC/f2c/dsapps.c \
SRC/f2c/dsaup2.c \
SRC/f2c/dsaupd.c \
SRC/f2c/dsconv.c \
SRC/f2c/dseigt.c \
SRC/f2c/dsesrt.c \
SRC/f2c/dseupd.c \
SRC/f2c/dsgets.c \
SRC/f2c/dsortc.c \
SRC/f2c/dsortr.c \
SRC/f2c/dstatn.c \
SRC/f2c/dstats.c \
SRC/f2c/dstqrb.c \
SRC/f2c/sgetv0.c \
SRC/f2c/slaqrb.c \
SRC/f2c/snaitr.c \
SRC/f2c/snapps.c \
SRC/f2c/snaup2.c \
SRC/f2c/snaupd.c \
SRC/f2c/snaupe.c \
SRC/f2c/snconv.c \
SRC/f2c/sneigh.c \
SRC/f2c/sneupd.c \
SRC/f2c/sngets.c \
SRC/f2c/ssaitr.c \
SRC/f2c/ssapps.c \
SRC/f2c/ssaup2.c \
SRC/f2c/ssaupd.c \
SRC/f2c/ssconv.c \
SRC/f2c/sseigt.c \
SRC/f2c/ssesrt.c \
SRC/f2c/sseupd.c \
SRC/f2c/ssgets.c \
SRC/f2c/ssortc.c \
SRC/f2c/ssortr.c \
SRC/f2c/sstatn.c \
SRC/f2c/sstats.c \
SRC/f2c/sstqrb.c \
SRC/f2c/zgetv0.c \
SRC/f2c/znaitr.c \
SRC/f2c/znapps.c \
SRC/f2c/znaup2.c \
SRC/f2c/znaupd.c \
SRC/f2c/zneigh.c \
SRC/f2c/zneupd.c \
SRC/f2c/zngets.c \
SRC/f2c/zsortc.c \
SRC/f2c/zstatn.c \
UTIL/f2c/cmout.c \
UTIL/f2c/cvout.c \
UTIL/f2c/dmout.c \
UTIL/f2c/dvout.c \
UTIL/f2c/icnteq.c \
UTIL/f2c/icopy.c \
UTIL/f2c/iset.c \
UTIL/f2c/iswap.c \
UTIL/f2c/ivout.c \
UTIL/f2c/second.c \
UTIL/f2c/smout.c \
UTIL/f2c/svout.c \
UTIL/f2c/zmout.c \
UTIL/f2c/zvout.c


noinst_LIBRARIES = libARPACK.a

libARPACK_a_SOURCES = SRC/cgetv0.f \
SRC/cnaitr.f \
SRC/cnapps.f \
SRC/cnaup2.f \
SRC/cnaupd.f \
SRC/cneigh.f \
SRC/cneupd.f \
SRC/cngets.f \
SRC/csortc.f \
SRC/cstatn.f \
SRC/dgetv0.f \
SRC/dlaqrb.f \
SRC/dnaitr.f \
SRC/dnapps.f \
SRC/dnaup2.f \
SRC/dnaupd.f \
SRC/dnaupe.f \
SRC/dnconv.f \
SRC/dneigh.f \
SRC/dneupd.f \
SRC/dngets.f \
SRC/dsaitr.f \
SRC/dsapps.f \
SRC/dsaup2.f \
SRC/dsaupd.f \
SRC/dsconv.f \
SRC/dseigt.f \
SRC/dsesrt.f \
SRC/dseupd.f \
SRC/dsgets.f \
SRC/dsortc.f \
SRC/dsortr.f \
SRC/dstatn.f \
SRC/dstats.f \
SRC/dstqrb.f \
SRC/sgetv0.f \
SRC/slaqrb.f \
SRC/snaitr.f \
SRC/snapps.f \
SRC/snaup2.f \
SRC/snaupd.f \
SRC/snaupe.f \
SRC/snconv.f \
SRC/sneigh.f \
SRC/sneupd.f \
SRC/sngets.f \
SRC/ssaitr.f \
SRC/ssapps.f \
SRC/ssaup2.f \
SRC/ssaupd.f \
SRC/ssconv.f \
SRC/sseigt.f \
SRC/ssesrt.f \
SRC/sseupd.f \
SRC/ssgets.f \
SRC/ssortc.f \
SRC/ssortr.f \
SRC/sstatn.f \
SRC/sstats.f \
SRC/sstqrb.f \
SRC/zgetv0.f \
SRC/znaitr.f \
SRC/znapps.f \
SRC/znaup2.f \
SRC/znaupd.f \
SRC/zneigh.f \
SRC/zneupd.f \
SRC/zngets.f \
SRC/zsortc.f \
SRC/zstatn.f \
UTIL/cmout.f \
UTIL/cvout.f \
UTIL/dmout.f \
UTIL/dvout.f \
UTIL/icnteq.f \
UTIL/icopy.f \
UTIL/iset.f \
UTIL/iswap.f \
UTIL/ivout.f \
UTIL/second.f \
UTIL/smout.f \
UTIL/svout.f \
UTIL/zmout.f \
UTIL/zvout.f \
SRC/debug.h \
SRC/stat.h \
SRC/version.h


AUTOMAKE_OPTIONS 	= foreign
